--- a/public/game/style.css
+++ b/public/game/style.css
@@ -116,12 +116,13 @@ ul {
 }
 
 .options.page .form {
-  height: 100px;
-  margin-top: -100px;
+  height: 100%;
+  margin: 5px;
+  padding: 5px;
   position: absolute;
 
-  text-align: center;
-  top: 50%;
+  text-align: left;
+  top: 0%;
   width: 100%;
 }
 
@@ -131,7 +132,7 @@ ul {
   border-bottom: 2px solid #fff;
   outline: none;
   padding-bottom: 15px;
-  text-align: center;
+  text-align: left;
   width: 400px;
 }
 
@@ -141,7 +142,7 @@ ul {
   border-bottom: 2px solid #fff;
   outline: none;
   padding-bottom: 15px;
-  text-align: center;
+  text-align: left;
   width: 400px;
 }
 
@@ -178,11 +179,9 @@ ul {
 
 .waiting.page .form {
   height: 100px;
-  margin-top: -100px;
   position: absolute;
 
   text-align: center;
-  top: 50%;
   width: 100%;
 }
 
